# workflow-warden

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  security.yml
docs/: ALLOWLIST_SUPPRESSION.md  SKILL_REGISTRY.md  security-audit-allowlist-suppression-2026-07-10.md  security-audit.md
examples/: allowlist.example.json
src/workflow_warden/: __init__.py  cli.py  sarif.py  scanner.py
tests/: test_allowlist_example.py  test_cli.py  test_sarif.py  test_scanner.py
tests/fixtures/: insecure.yml  secure.yml
